# project_guardian_pro

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py
src/analyzers/: security_analyzer.py
src/guardian/: cli.py
src/guardian/analyzers/: dependency_analyzer.py  health_score.py  project_stats.py
src/guardian/utils/: scanner.py
src/reports/: markdown_report.py
src/utils/: logger.py  scanner.py
tests/: test_cli.py  test_health_score.py  test_project_stats.py  test_security_analyzer.py
