[project]
name = "project-guardian-pro"
version = "0.1.0"
description = "Automated Python project analysis tool with security scanning, project statistics, health scoring, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
[tool.black]
target-version = ["py311"]
line-length = 88